--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 # MySQL properties
 
 mysql.driver=com.mysql.cj.jdbc.Driver
-mysql.url=jdbc:mysql://host1:33060/bookapi
+mysql.url=jdbc:mysql://localhost:3306/bookapi?serverTimezone=UTC
 mysql.user=root
 mysql.pas$w0rd=root
 
